@@ -267,7 +267,7 @@
 #define AUX_STACK_SIZE              20
 #define MAX_BIB_FILES               20
 
-#define BUF_SIZE                   10000
+#define BUF_SIZE                   20000
 #define MAX_CITES                  750
 #define MAX_FIELDS                 5000
 #define MAX_STRINGS                4000
